# ai-chinese-chess

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  config.ini  pyproject.toml  requirements.txt
ai/: mcts.py  model.py
browser/: automate.py
game/: engine.py  pieces.py  reward.py
scripts/: check_move_parity.py  debug_game_state.py  evaluate.py  merge_data.py  play.py  self_play.py  train.py  training_loop.py
tests/: test_browser_coordinates.py  test_browser_difficulty_selection.py  test_browser_execute_move.py  test_browser_game_end_detection.py  test_browser_side_labels.py  test_browser_turn_sync.py  test_capture_reward_flow.py  test_engine_cannon_rules.py  test_engine_piece_rules.py  test_engine_piece_sanity.py  test_game_id_flow.py  test_mcts_root_noise.py  test_move_parity_utils.py  test_play_turn_flow.py  test_run_automated_play_flow.py  test_self_play_flow.py  test_train_flow.py  test_training_loop_flow.py
utils/: log.py
