[project]
name = "xiangqi-alphazero"
version = "0.1.0"
description = "AlphaZero Chinese Chess AI Training Project"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Project Author" }
]
keywords = ["alphazero", "xiangqi", "chinese-chess", "ai", "machine-learning"]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "playwright>=1.40.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ai", "game", "browser", "scripts"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
